<resources>
    <string name="app_name">Math Learner</string>
    <string name="learn_button">Learn</string>
    <string name="play_button">Play</string>
    <string name="learn_addition_button">+ addition</string>
    <string name="learn_subtraction_button">- subtraction</string>
    <string name="learn_multiplication_button">* multiplication</string>
    <string name="learn_division_button">/ division</string>
    <string name="learn_equation_button">= equation</string>

</resources>
